# assemblyai-transcription-poc

./: .gitignore  README.md  pyproject.toml
src/: main.py
