[tool.poetry]
name = "assembly-ai-transcription-poc"
version = "0.1.0"
description = "Used to test the transcription capabilities of AssemblyAI"
authors = ["DJ Spatoulas <dspatoulas21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
assemblyai = "^0.33.0"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pyyaml = "~5.3"
poetry = "^1.7.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
